Log in and sign up page are connected and ready to work

--- a/Project Management System/src/project/management/system/GUI/GUILogIn.form
+++ b/Project Management System/src/project/management/system/GUI/GUILogIn.form
@@ -27,7 +27,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace pref="113" max="32767" attributes="0"/>
               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="370" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+              <Component id="signUp" min="-2" pref="84" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="203" max="-2" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
@@ -80,8 +82,10 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="signUp" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="49" max="32767" attributes="0"/>
+              <EmptySpace pref="19" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -128,6 +132,11 @@
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
         <Property name="text" type="java.lang.String" value="Or Sign up If You Are New"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="signUp">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Sign Up"/>
       </Properties>
     </Component>
   </SubComponents>
