--- a/Project Management System/src/project/management/system/GUI/GUILogIn.form
+++ b/Project Management System/src/project/management/system/GUI/GUILogIn.form
@@ -112,6 +112,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Default Cursor"/>
         </Property>
+        <Property name="focusable" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LoginActionPerformed"/>
@@ -157,6 +158,7 @@
           <Font name="Castellar" size="18" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Sign Up"/>
+        <Property name="focusable" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="signUpActionPerformed"/>
